# image2grid

./: .gitignore  .mise.toml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: publish-to-pypi.yaml  release-drrafter.yaml
image2grid/: __init__.py  cli.py  cropper.py
