[tool.poetry]
name = "image2grid"
version = "0.1.1"
description = "Turn an image into a grid images"
authors = ["kiwamizamurai <24860100+kiwamizamurai@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kiwamizamurai"
repository = "https://github.com/kiwamizamurai/image2grid"

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "1.0.3"
pillow = "9.5.0"
gitpython = "3.1.43"

[tool.poetry.group.dev.dependencies]
ruff = "0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
image2grid = "image2grid.cli:main"

[tool.ruff]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]

line-length = 180
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true